--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.2.5
 django-heroku==0.3.1
 psycopg2==2.9.3
+python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
 whitenoise==6.2.0
