--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.5.2
 dj-database-url==0.5.0
 Django==3.2.5
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
+django-mathfilters==1.0.0
+django-widget-tweaks==1.4.12
 gunicorn==20.1.0
+numpy==1.22.4
 psycopg2==2.9.3
 python-dotenv==0.20.0
 pytz==2022.1
